--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "simple login / signup app",
   "main": "app.js",
   "type": "module",
+  "engines": {
+    "node": "19.0.0"
+  },
   "scripts": {
     "start": "node -r dotenv/config app.js",
     "dev": "nodemon -r dotenv/config app.js"
@@ -20,6 +23,7 @@
   "homepage": "https://github.com/bennyfreemantle/login-app#readme",
   "dependencies": {
     "argon2": "^0.30.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
